syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetSimilarProducts (stream ProductsRequest) returns (stream RecommendedProduct);
}

message ProductsRequest {
  string username = 1;
  repeated int32 productIds = 2;
}

message Product {
  int32 id = 1;
  string name = 2;
  string subcategory = 3;
  float price = 4;
}

message RecommendedProduct {
  string username = 1;
  Product product = 2;
}